@@ -5,6 +5,7 @@
 
 package org.opensearch.sql.planner.logical;
 
+import java.util.Collections;
 import java.util.List;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
@@ -24,7 +25,7 @@ public class LogicalAggregation extends LogicalPlan {
   /** Constructor of LogicalAggregation. */
   public LogicalAggregation(
       LogicalPlan child, List<NamedAggregator> aggregatorList, List<NamedExpression> groupByList) {
-    super(List.of(child));
+    super(Collections.singletonList(child));
     this.aggregatorList = aggregatorList;
     this.groupByList = groupByList;
   }
