@@ -5,6 +5,7 @@
 
 package org.opensearch.sql.planner.logical;
 
+import java.util.Collections;
 import java.util.List;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
@@ -26,7 +27,7 @@ public class LogicalEval extends LogicalPlan {
 
   /** Constructor of LogicalEval. */
   public LogicalEval(LogicalPlan child, List<Pair<ReferenceExpression, Expression>> expressions) {
-    super(List.of(child));
+    super(Collections.singletonList(child));
     this.expressions = expressions;
   }
 
