@@ -5,6 +5,7 @@
 
 package org.opensearch.sql.planner.logical;
 
+import java.util.Collections;
 import java.util.List;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
@@ -24,7 +25,7 @@ public class LogicalProject extends LogicalPlan {
       LogicalPlan child,
       List<NamedExpression> projectList,
       List<NamedExpression> namedParseExpressions) {
-    super(List.of(child));
+    super(Collections.singletonList(child));
     this.projectList = projectList;
     this.namedParseExpressions = namedParseExpressions;
   }
