@@ -6,6 +6,7 @@
 package org.opensearch.sql.planner.physical;
 
 import com.google.common.collect.Ordering;
+import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import lombok.EqualsAndHashCode;
@@ -72,7 +73,7 @@ public class TakeOrderedOperator extends PhysicalPlan {
 
   @Override
   public List<PhysicalPlan> getChild() {
-    return List.of(input);
+    return Collections.singletonList(input);
   }
 
   @Override
